--- a/blank/myapplication/src/main/res/values/colors.xml
+++ b/blank/myapplication/src/main/res/values/colors.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#18a1d8</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#6d6c6c</color>
-    <color name="colorWhite">#ffffffff</color>
+    <color name="colorWhite">#ffffff</color>
     <color name="title_text">#00574B</color>
+    <color name="colorBlue">#FF18A1D8</color>
 
 
 </resources>
