--- a/blank/myapplication/src/main/res/layout/activity_main.xml
+++ b/blank/myapplication/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/button"
         android:layout_width="100dp"
         android:layout_height="50dp"
         android:background="@android:color/transparent"
@@ -39,7 +39,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.071"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/button"
         app:layout_constraintVertical_bias="0.018" />
 
     <TextView
