--- a/blank/myapplication/src/main/res/values/colors.xml
+++ b/blank/myapplication/src/main/res/values/colors.xml
@@ -8,4 +8,10 @@
     <color name="colorBlue">#FF18A1D8</color>
 
 
+
+    <color name="gray">#666161</color>
+    <color name="black">#000000</color>
+    <color name="white">#ffffff</color>
+
+
 </resources>
